--- a/.github/workflows/genezio.yml
+++ b/.github/workflows/genezio.yml
@@ -12,7 +12,7 @@ jobs:
       id-token: write # Needed for auth with Deno Deploy
     steps:
       - uses: actions/checkout@v4
-      - run: corepack enable
+      - run: npm i -fg corepack && corepack enable
       - uses: actions/setup-node@v4
         with:
           cache: "pnpm"
