--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "scripts": {
     "build": "nitropack build",
     "dev": "nitropack dev",
+    "dev:prepare": "nitropack prepare",
     "lint": "eslint . && prettier -c .",
     "lint:fix": "eslint --fix . && prettier -w -c .",
-    "dev:prepare": "nitropack prepare",
     "readme": "automd && pnpm lint:fix",
-    "test": "pnpm lint && test:deployments",
+    "test": "pnpm lint",
     "test:deployments": "jiti ./test/tests.ts",
     "test:dev": "NODE_ENV=development jiti ./test/tests.ts"
   },
   "devDependencies": {
     "@actions/core": "^1.11.1",
     "automd": "^0.4.0",
+    "eslint": "^9.21.0",
     "eslint-config-unjs": "^0.4.2",
     "jiti": "^2.4.2",
     "nitropack": "npm:nitropack-nightly@2.11.0-20250303-193004.791fcb93",
