--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
   "packageManager": "pnpm@10.5.2",
   "engines": {
     "node": ">=20.18.1"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "unenv": "patches/unenv.patch"
+    }
   }
 }
