--- a/package.json
+++ b/package.json
@@ -2,22 +2,18 @@
   "name": "nitro-deploys",
   "private": true,
   "scripts": {
-    "build": "nitropack build",
-    "dev": "nitropack dev",
-    "dev:prepare": "nitropack prepare",
+    "build": "nitro build",
+    "dev": "nitro dev",
+    "dev:prepare": "nitro prepare",
     "lint": "eslint . && prettier -c .",
     "lint:fix": "eslint --fix . && prettier -w -c .",
     "readme": "automd && pnpm lint:fix",
-    "test": "pnpm lint",
-    "test:deployments": "jiti ./test/tests.ts",
-    "test:dev": "NODE_ENV=development jiti ./test/tests.ts"
+    "test": "pnpm lint"
   },
   "devDependencies": {
-    "@actions/core": "^1.11.1",
     "automd": "^0.4.0",
     "eslint": "^9.21.0",
     "eslint-config-unjs": "^0.4.2",
-    "jiti": "^2.4.2",
     "nitropack": "npm:nitropack-nightly@2.11.9-20250404-154248.592f81c6",
     "prettier": "^3.5.3"
   },
