--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "nitro build",
     "dev": "nitro dev",
     "dev:prepare": "nitro prepare",
+    "start": "node .output/server/index.mjs",
     "lint": "eslint . && prettier -c .",
     "lint:fix": "eslint --fix . && prettier -w -c .",
     "readme": "automd && pnpm lint:fix",
